URLNORMALZ-41: Depend on XWiki 15.10+ * Cleanup * Convert all tests to JUnit5